# crawling-python

./: .gitignore  README.md  ex01_크롤링기초.ipynb  ex02_멜론TOP100.ipynb  ex05_한솥도시락메뉴데이터.ipynb  main.py  parse.txt  pyproject.toml  뉴스데이터수집.ipynb  언론사수집.ipynb
data/: 뉴스기사.csv  언론사리스트.csv  한솥도시락메뉴.csv
example/: ex01_크롤링 기초.ipynb  ex02_멜론TOP100수집.ipynb  ex03_바디럽페이지리뷰수집.ipynb  ex05_한솥도시락메뉴데이터크롤링.ipynb
